grafana/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tools
  annotations:
      prometheus.io/scrape: 'true'  
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  ports:
    - name: grafana
      port: 3000
