grafana/service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: ipwhitelist-privnets
    services:
    - name: grafana
      port: 3000
      namespace: tools
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
  namespace: tools
spec:
  entryPoints:
    - websecure
  tls:
    secretName: secret-grafana-k8s-lenin-nu
  routes:
  - match: Host(`grafana.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: ipwhitelist-privnets
    services:
    - name: grafana
      port: 3000
      namespace: tools
